added in option to bin files or not

--- a/IFCB_analysis_config.cfg
+++ b/IFCB_analysis_config.cfg
@@ -13,6 +13,9 @@ ml_analyzed_directory = D:/CJunk/IFCB7/data_for_analysis/summary_files/
 #what do the ml_analyzed files start with? e.g. if the file name is 'ml_analyzed_2009' then put 'ml_analyzed_'
 ml_analyzed_prefix = ml_analyzed_
 
+#do you want to bin the results? put True for time series and False for spatial things like cruise data
+bin_files = True
+
 #what bin frequency do you want the results in?
 # 1h = 1 hour; 2h = 2 hours; 1w = weekly; 1m = monthly; 2m = two months; 1y = yearly
 bin_frequency = 2d
